// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-BIIkq jayyzK"
  >
    <div
      className="sc-doCyfw kmCkKL"
    >
      <ul
        className="sc-jmhOSl sc-cbDwiu gZgwrc dSpUMR"
      >
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            0
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            1
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            2
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            3
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            4
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            5
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            6
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            7
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            8
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            9
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            10
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            11
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            12
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            13
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            14
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            15
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            16
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            17
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            18
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            19
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            20
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            21
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            22
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            23
          </div>
        </li>
        <li
          className="sc-hZiMVj ejLhix"
        >
          <div
            className="sc-QzmmP fVJmri"
          >
            24
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Carousel renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex justify-around items-center w-full"
  >
    <div
      className="sc-dexYeb eEsCJl"
    >
      <div
        className="sc-doCyfw kmCkKL"
      >
        <ul
          className="sc-jmhOSl sc-cbDwiu gZgwrc dSpUMR"
        >
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              24
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              23
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              22
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              21
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              20
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              19
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              18
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              17
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              16
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              15
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              14
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              13
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              12
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              11
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              10
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              9
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              8
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              7
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              6
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              5
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              4
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              3
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              2
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              1
            </div>
          </li>
          <li
            className="sc-hZiMVj ejLhix"
          >
            <div
              className="sc-iwoqQi jmsVpd"
            >
              0
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel renders visible index 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-doCyfw kmCkKL"
  >
    <ul
      className="sc-jmhOSl sc-cbDwiu dTPDcw dSpUMR"
    >
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-LAAhi hbFqui"
        >
          -1
          , 
          -1
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Carousel renders with Customized Arrows 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-doCyfw kmCkKL"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to left
    </button>
    <ul
      className="sc-jmhOSl sc-cbDwiu gZgwrc dSpUMR"
    >
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          0
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          1
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          2
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          3
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          4
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          5
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          6
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          7
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          8
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          9
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          10
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          11
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          12
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          13
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          14
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          15
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          16
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          17
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          18
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          19
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          20
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          21
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          22
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          23
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-bEeDdh dsGaRJ"
        >
          24
        </div>
      </li>
    </ul>
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to Right
    </button>
  </div>
</div>
`;

exports[`Carousel renders with different Space 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-doCyfw kmCkKL"
  >
    <ul
      className="sc-jmhOSl sc-cbDwiu dTPDcw dSpUMR"
    >
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-gVUVPo fjPzxC"
        >
          0
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-gVUVPo fjPzxC"
        >
          1
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-gVUVPo fjPzxC"
        >
          2
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-gVUVPo fjPzxC"
        >
          3
        </div>
      </li>
      <li
        className="sc-hZiMVj ejLhix"
      >
        <div
          className="sc-gVUVPo fjPzxC"
        >
          4
        </div>
      </li>
    </ul>
  </div>
</div>
`;
